--- a/package.json
+++ b/package.json
@@ -13,7 +13,38 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
-    "typescript": "^3.7.5"
+    "typescript": "^3.7.5",
+    "@types/axios": "^0.14.0",
+    "@types/classnames": "^2.2.10",
+    "@types/i18next": "^13.0.0",
+    "@types/i18next-browser-languagedetector": "^3.0.0",
+    "@types/jwt-decode": "^2.2.1",
+    "@types/moment": "^2.13.0",
+    "@types/react-i18next": "^8.1.0",
+    "@types/react-outside-click-handler": "1.3.0",
+    "@types/react-redux": "^7.1.9",
+    "@types/react-router-dom": "^5.1.5",
+    "@types/reactstrap": "^8.5.0",
+    "@types/redux": "^3.6.0",
+    "@types/redux-thunk": "^2.1.0",
+    "axios": "^0.19.2",
+    "bootstrap": "^4.5.0",
+    "classnames": "^2.2.6",
+    "i18next": "^19.6.3",
+    "i18next-browser-languagedetector": "^5.0.0",
+    "jwt-decode": "^2.2.0",
+    "moment": "^2.27.0",
+    "node-sass": "^4.14.1",
+    "react-bootstrap": "^1.3.0",
+    "react-hook-form": "^6.1.2",
+    "react-i18next": "^11.7.0",
+    "react-outside-click-handler": "^1.3.0",
+    "react-qr-code": "^1.0.2",
+    "react-redux": "^7.2.1",
+    "react-router-dom": "^5.2.0",
+    "reactstrap": "^8.5.1",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
